# relay

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  REUSE.toml  STRUCTURE.md  deny.toml  docker-compose.yml  test-relay.sh
deploy/: DEPLOYMENT.md  install.sh
deploy/caddy/: Caddyfile  Caddyfile.local
deploy/helm/vauchi-relay/: Chart.yaml  values.yaml
deploy/helm/vauchi-relay/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deploy/nginx/: vauchi-relay.conf
deploy/systemd/: vauchi-relay.service
scripts/: test-integration.sh
src/: config.rs  connection_limit.rs  connection_registry.rs  device_sync_storage.rs  federation_connector.rs  federation_handler.rs  federation_protocol.rs  federation_tls.rs  forwarding_hints.rs  gossip.rs  handler.rs  http.rs  integrity.rs  lib.rs  main.rs  metrics.rs  noise_key.rs  noise_transport.rs  peer_registry.rs  rate_limit.rs  recovery_storage.rs  storage.rs
tests/: federation_integration_test.rs  federation_load_test.rs  handler_websocket_test.rs  http_peek_routing_test.rs  noise_integration_test.rs  realistic_load_test.rs  relay_integration_test.rs  relay_load_test.rs  relay_websocket_load_test.rs
tests/common/: mod.rs
