[package]
name = "vauchi-relay"
version = "0.1.0"
edition = "2021"
description = "Relay server for Vauchi - encrypted blob storage and forwarding"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for blob IDs
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite for persistent storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server for health/metrics endpoints
axum = "0.7"

# Prometheus metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
