# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-relay"
version = "1.0.0"
edition = "2021"
description = "Relay server for Vauchi - encrypted blob storage and forwarding"
license = "GPL-3.0-or-later"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for blob IDs
uuid = { version = "1.0", features = ["v4"] }

# Hex encoding/decoding for key hashes
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite for persistent storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server for health/metrics endpoints
axum = "0.7"

# Prometheus metrics
prometheus = "0.14"

# SHA-256 integrity hashing for federation blob transfer
ring = "0.17"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
